--- a/training-service/src/main/resources/application.properties
+++ b/training-service/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.cloud.config.enabled=false
 spring.cloud.discovery.enabled=true
+#test
