--- a/config-service/src/main/resources/application.properties
+++ b/config-service/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.cloud.config.server.git.default-label=main
 spring.cloud.config.server.git.search-paths=config-service/config-repo-git
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
+#test
