--- a/Keycloak-Docker/docker-compose.yml
+++ b/Keycloak-Docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   keycloak:
     image: quay.io/keycloak/keycloak:latest
-    container_name: keycloak
+    container_name: keycloak_local
     ports:
       - "8080:8080"
     environment:
