--- a/participant-service/src/main/resources/application.properties
+++ b/participant-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=participant-service
 server.port=8082
-#spring.config.import=optional:configserver:http://localhost:9999
+spring.config.import=optional:configserver:http://localhost:9999
 
 management.health.circuitbreakers.enabled=true
 management.endpoint.health.show-details=always
@@ -9,6 +9,13 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.cloud.config.enabled=false
+spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 #test
+
+management.endpoints.web.exposure.include=*
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+management.observations.key-values.application=participant-service
+management.tracing.sampling.probability=1.0
+# Loki URL
+loki.url=http://localhost:3100/loki/api/v1/push
